--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 .gradle
 .idea
 build
+
+# demo
+demo/HelloWorld/.settings/
+demo/HelloWorld/.vscode/
+demo/HelloWorld/target/
+demo/HelloWorld/.project
+demo/HelloWorld/.classpath
