--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'maven'
     id 'io.izzel.taboolib' version '1.2'
     id 'org.jetbrains.kotlin.jvm' version '1.4.0'
     id 'net.kyori.blossom' version '1.1.0'
@@ -23,7 +24,7 @@ repositories {
 }
 
 dependencies {
-    compile 'ink.ptms.core:v11600:11600:all'
+    compileOnly 'ink.ptms.core:v11600:11600:all'
     compile 'org.jetbrains.kotlin:kotlin-stdlib'
 
     compileOnly 'net.mamoe:mirai-core-qqandroid:1.3.3'
