--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@ demo/HelloWorld/.vscode/
 demo/HelloWorld/target/
 demo/HelloWorld/.project
 demo/HelloWorld/.classpath
+demo/Repeater/.settings/
+demo/Repeater/.vscode/
+demo/Repeater/target/
+demo/Repeater/.project
+demo/Repeater/.classpath
