--- a/build.gradle
+++ b/build.gradle
@@ -21,10 +21,14 @@ taboolib {
 repositories {
     mavenCentral()
     jcenter()
+    maven {
+        url 'https://jitpack.io'
+    }
 }
 
 dependencies {
     compileOnly 'ink.ptms.core:v11600:11600:all'
+    compileOnly 'com.github.SkriptLang:Skript:2.5.2'
     compile 'org.jetbrains.kotlin:kotlin-stdlib'
 
     compileOnly 'net.mamoe:mirai-core-qqandroid:1.3.3'
