--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,6 +5,9 @@ version: ${project.version}
 author: msg_dw
 description: 'Minecraft QQ机器人'
 
+softdepend:
+  - Skript
+
 api-version: 1.13
 
 lib-download: true
