--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,9 @@
 .idea
 build
 
-# demo
-demo/HelloWorld/.settings/
-demo/HelloWorld/.vscode/
-demo/HelloWorld/target/
-demo/HelloWorld/.project
-demo/HelloWorld/.classpath
-demo/Repeater/.settings/
-demo/Repeater/.vscode/
-demo/Repeater/target/
-demo/Repeater/.project
-demo/Repeater/.classpath
+# vscode
+.settings/
+.vscode/
+target/
+.project
+.classpath
