--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,23 @@
+buildscript {
+    repositories {
+        maven {
+            url "https://maven.aliyun.com/repository/public/"
+        }
+    }
+    dependencies {
+        classpath "gradle.plugin.io.izzel.taboolib:taboolib-gradle-plugin:1.3"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.30-RC"
+        classpath "gradle.plugin.net.kyori:blossom:1.1.0"
+    }
+}
+
 plugins {
     id 'java'
     id 'maven'
-    id 'io.izzel.taboolib' version '1.2'
-    id 'org.jetbrains.kotlin.jvm' version '1.4.0'
-    id 'net.kyori.blossom' version '1.1.0'
 }
+apply plugin: "org.jetbrains.kotlin.jvm"
+apply plugin: "io.izzel.taboolib"
+apply plugin: "net.kyori.blossom"
 
 group = 'pro.sandiao'
 version = '1.0.4'
@@ -19,9 +32,15 @@ taboolib {
 }
 
 repositories {
-    mavenCentral()
-    jcenter()
     maven {
+        url 'https://maven.aliyun.com/repository/central'
+    }
+    maven{
+        url 'https://maven.aliyun.com/repository/public'
+    }
+    jcenter()
+    mavenCentral()
+    maven{
         url 'https://jitpack.io'
     }
 }
@@ -31,7 +50,7 @@ dependencies {
 
     compileOnly 'ink.ptms.core:v11600:11600:all'
     compileOnly 'com.github.SkriptLang:Skript:2.5.1'
-    compileOnly 'net.mamoe:mirai-core-qqandroid:1.3.3'
+    compileOnly 'net.mamoe:mirai-core:2.1.1'
 
     compileOnly fileTree(dir: 'libs', includes: ['*.jar'])
 }
